correções recebimento do token e adição dos planos de ação na documentação
